fix grafik layout by wrapping it into container and other pages by not messing with body style

--- a/_sass/pages/grafik.scss
+++ b/_sass/pages/grafik.scss
@@ -106,12 +106,6 @@ $padding: 3em;
 /*************************
  * VISUAL STYLES
  *************************/
-body {
-	padding: 50px;
-	max-width: 1100px;
-	margin: 0 auto;
-}
-
 .session {
     background-color: $primary;
 	color: #fff;
